# deps-lsp

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.cargo/: config.toml
.config/: nextest.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: parsing.rs
crates/deps-cargo/: Cargo.toml  README.md
crates/deps-cargo/benches/: cargo_benchmarks.rs
crates/deps-cargo/src/: ecosystem.rs  error.rs  formatter.rs  handler.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs
crates/deps-core/: Cargo.toml  README.md
crates/deps-core/benches/: core_benchmarks.rs
crates/deps-core/src/: cache.rs  completion.rs  ecosystem.rs  ecosystem_registry.rs  error.rs  handler.rs  lib.rs  lockfile.rs  lsp_helpers.rs  macros.rs  parser.rs  registry.rs
crates/deps-go/: Cargo.toml  README.md
crates/deps-go/benches/: go_benchmarks.rs
crates/deps-go/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs  version.rs
crates/deps-lsp/: Cargo.toml  README.md
crates/deps-lsp/benches/: lsp_handlers.rs
crates/deps-lsp/benches/fixtures/: medium_cargo.toml  small_cargo.toml
crates/deps-lsp/src/: cache.rs  config.rs  document.rs  document_lifecycle.rs  error.rs  file_watcher.rs  lib.rs  main.rs  progress.rs  server.rs  test_utils.rs
crates/deps-lsp/src/cargo/: mod.rs  types.rs
crates/deps-lsp/src/document/: lifecycle.rs  loader.rs  mod.rs  state.rs
crates/deps-lsp/src/handlers/: cargo_handler_impl.rs  code_actions.rs  completion.rs  diagnostics.rs  hover.rs  inlay_hints.rs  mod.rs  npm_handler_impl.rs  pypi_handler_impl.rs
crates/deps-lsp/tests/: loading_indicator_e2e.rs  lsp_integration.rs  notification_ordering.rs
crates/deps-lsp/tests/common/: mod.rs
crates/deps-npm/: Cargo.toml  README.md
crates/deps-npm/benches/: npm_benchmarks.rs
crates/deps-npm/src/: ecosystem.rs  error.rs  formatter.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs
crates/deps-pypi/: Cargo.toml  README.md
crates/deps-pypi/benches/: pypi_benchmarks.rs
crates/deps-pypi/src/: ecosystem.rs  formatter.rs  lib.rs  lockfile.rs  parser.rs  registry.rs  types.rs
crates/deps-zed/: Cargo.toml  README.md  extension.toml
crates/deps-zed/src/: lib.rs
docs/: ECOSYSTEM_GUIDE.md
scripts/: install-local.sh
templates/: README.md
templates/deps-ecosystem/: Cargo.toml.template
templates/deps-ecosystem/src/: ecosystem.rs.template  error.rs.template  formatter.rs.template  lib.rs.template  parser.rs.template  registry.rs.template  types.rs.template
tests/fixtures/: complex.toml  malformed.toml  simple.toml  workspace_member.toml  workspace_root.toml
