[workspace]
members = ["crates/*"]
exclude = ["crates/deps-zed"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.89"
authors = ["Andrei G"]
license = "MIT"
repository = "https://github.com/bug-ops/deps-lsp"

[workspace.dependencies]
async-trait = "0.1"
criterion = "0.8"
dashmap = "6.1"
deps-core = { version = "0.2.1", path = "crates/deps-core" }
deps-cargo = { version = "0.2.1", path = "crates/deps-cargo" }
deps-npm = { version = "0.2.1", path = "crates/deps-npm" }
deps-lsp = { version = "0.2.1", path = "crates/deps-lsp" }
futures = "0.3"
insta = "1"
mockito = "1"
node-semver = "2.2"
reqwest = { version = "0.12", default-features = false }
semver = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1.48"
tokio-test = "0.4"
toml_edit = "0.24"
tower-lsp = "0.20"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"
zed_extension_api = "0.7"

[profile.release]
lto = true
codegen-units = 1
strip = true
