[package]
name = "deps-cargo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Cargo.toml support for deps-lsp"
publish = true

[dependencies]
deps-core = { workspace = true }
async-trait = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
toml_edit = { workspace = true }
tower-lsp = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["json"] }
once_cell = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }

[[bench]]
name = "cargo_benchmarks"
harness = false
