[package]
name = "deps-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core abstractions for deps-lsp: caching, errors, and traits"
publish = true

[dependencies]
async-trait = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "gzip", "rustls-tls"] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "fs"] }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
mockito = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
tokio-test = { workspace = true }

[[bench]]
name = "core_benchmarks"
harness = false
