[package]
name = "deps-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language Server Protocol implementation for dependency management"
publish = true

[[bin]]
name = "deps-lsp"
path = "src/main.rs"

[lib]
name = "deps_lsp"
path = "src/lib.rs"

[dependencies]
# Internal crates
deps-core = { workspace = true }
deps-cargo = { workspace = true }
deps-npm = { workspace = true }
deps-pypi = { workspace = true }
deps-go = { workspace = true }

# External dependencies
dashmap = { workspace = true }
futures = { workspace = true }
semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "io-std"] }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true, features = ["json"] }
mockito = { workspace = true }
tempfile = { workspace = true }
tokio-test = { workspace = true }

[[bench]]
name = "lsp_handlers"
harness = false
