[package]
name = "deps-npm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "npm/package.json support for deps-lsp"
publish = true

[dependencies]
deps-core = { workspace = true }
async-trait = { workspace = true }
node-semver = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-lsp-server = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["json"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "npm_benchmarks"
harness = false
