[package]
name = "deps-pypi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "PyPI/Python support for deps-lsp"

[dependencies]
deps-core = { workspace = true }
async-trait = { workspace = true }
pep440_rs = { workspace = true }
pep508_rs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-lsp = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
insta = { workspace = true, features = ["json"] }
mockito = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "pypi_benchmarks"
harness = false
