[package]
name = "deps-zed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Zed editor extension for deps-lsp"

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = { workspace = true }
